# webgpu-project

./: .gitignore  Cargo.toml  index.html
pkg/: package.json  webgpu_test.d.ts  webgpu_test.js  webgpu_test_bg.wasm  webgpu_test_bg.wasm.d.ts
src/: camera.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  renderer.rs  resources.rs  scene.rs  shader.wgsl  texture.rs
src/res/: dragon.mtl
